tests/vendor/invalid/semantics/out_of_scope.c
//tags: simple, scoping
int main() {
    {
        int a = 2;
    }
    return a;
}